--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.31.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
