--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "",
+  "author": "josecarlosjdi",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,6 +25,7 @@
     "passport-local": "^1.0.0",
     "sequelize": "^6.31.0"
   },
-  "devDependencies": {},
-  "description": ""
+  "engines": {
+    "node": "18.x"
+  }
 }
